# ros_synapse

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  claude_md.md  cpp_coding_standard.markdown  plan.md  settings.toml  test_log_publisher.py
include/: commandwidget.h  configmanager.h  mainwindow.h  processmonitor.h  ros2executor.h  sshmanager.h  sshpassworddialog.h  sshtabwidget.h
src/: commandwidget.cpp  configmanager.cpp  main.cpp  mainwindow.cpp  processmonitor.cpp  ros2executor.cpp  sshmanager.cpp  sshpassworddialog.cpp  sshtabwidget.cpp
